Header top terminado, navegación caso terminada

--- a/index.html
+++ b/index.html
@@ -8,38 +8,62 @@
     <title>Hamburguesería</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Este link es la hoja de estilos que hemos extraido de la hoja de estilos para los iconos -->
-    <link rel="stylesheet" href="/Pre-curso/Ejercicios/Hamburguesería/CSS/stylehamburger.css">
+    <link rel="stylesheet" href="./CSS/stylehamburger.css">
 </head>
 
 <body>
     <div class="wrapper" id="top">
         <header>
             <div class="nav-top">
-                <div class="container"></div>
-                <div>
-                    <a href="mailto:rovert@gmail.com">
-                        <i class="fas fa-envelope"></i>
-                        <samp>rovert@gmail.com</samp>
-                    </a>
+                <div class="container">
+                    <div>
+                        <a href="mailto:rovert@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                            <span>rovert@gmail.com</span>
+                        </a>
+                    </div>
                     <div>
                         <a href="tel:917972136">
                             <i class="fas fa-phone"></i>
-                            <samp>91 797 21 26</samp>
+                            <span>91 797 21 26</span>
                         </a>
                     </div>
                     <div>
                         <a href="#">
                             <i class="fas fa-shopping-cart"></i>
-                            <samp>Haz tu pedido</samp>
+                            <span>Haz tu pedido</span>
                         </a>
                     </div>
                     <div>
                         <a href="#">
                             <i class="fas fa-user-circle"></i>
-                            <samp>Usuario</samp>
+                            <span>Usuario</span>
                         </a>
                     </div>
                 </div>
+            </div>
+
+            <nav>
+                <div class="container">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="images/images/logo.jpg" alt="Rovers">
+                        </a>
+                    </div>
+                    <div class="hamburguesa">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html"></a>Menú</li>
+                        <li><a href="blog.html"></a>Blog</li>
+                        <li><a href="team.html"></a>Team</li>
+                    </ul>
+                </div>
+
+            </nav>
         </header>
 
     </div>
