--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <div></div>
                     </div>
                     <ul class="menu">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="menu.html"></a>Menú</li>
-                        <li><a href="blog.html"></a>Blog</li>
-                        <li><a href="team.html"></a>Team</li>
+                        <li><a class="activo" href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="team.html">Team</a></li>
                     </ul>
                 </div>
 
