--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
             </nav>
         </header>
 
+        <footer>
+            <div class="container">
+                <p>CopyrightyCopy;2021 - <a href="#"> Aviso Legal</a></p>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Esto es para realizar el PUNTO DE ANCLA -->
+    <div class="flecha">
+        <a href="#top"><i class="fas fa-caret-square-up"></i></a>
+
     </div>
 </body>
 
