Plantilla de header  + footer

--- a/plantilla-header-footer.html
+++ b/plantilla-header-footer.html
@@ -66,6 +66,42 @@
             </nav>
         </header>
 
+        <!-- Esto es para el hero, toda sección para llamar la atención, ya sea un CTA, slider, etc... -->
+        <div class="hero">
+            <div class="container">
+                <h1>Las mejores hamburguesas del mundo</h1>
+                <h3>Bienvenido a nuestra hamburguesería</h3>
+                <p>Come a partir de 15 €</p>
+                <div>
+                    <a href="" class="boton"></a>
+                    Nuestra carta
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </div>
         <footer>
             <div class="container">
                 <p>CopyrightyCopy;2021 - <a href="#"> Aviso Legal</a></p>
