--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
 
         </div>
 
+        <main>
+            <!-- <h1> Sería correcto ponerlo y ocultarlo para que se pueda indenxar. Es decir con display: none. -->
+            <section id="ourservice">
+                <div class="container">
+                    <h2>Our <span>Service</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+
+                    <div class="grid">
+                        <article></article>
+                        <article></article>
+                        <article></article>
+
+                    </div>
+                </div>
+            </section>
+
+        </main>
+
+
         <footer>
             <div class="container">
                 <p>CopyrightyCopy;2021 - <a href="#"> Aviso Legal</a></p>
