--- a/index.html
+++ b/index.html
@@ -115,9 +115,47 @@
                     </div>
 
                     <div class="grid">
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore quis quas facere id
+                                possimus sapiente voluptatum voluptas iusto porro incidunt.</p>
+
+                            <a href="#" class="enlace">
+                                Leer más
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+
+                        <article>
+                            <div>
+                                <i class="fas fa-truck"></i>
+                            </div>
+                            <h3>2. Cocina moderna</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore quis quas facere id
+                                possimus sapiente voluptatum voluptas iusto porro incidunt.</p>
+
+                            <a href="#" class="enlace">
+                                Leer más
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+
+                        <article>
+                            <div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            <h3>3. Free Covid-19 </h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore quis quas facere id
+                                possimus sapiente voluptatum voluptas iusto porro incidunt.</p>
+
+                            <a href="#" class="enlace">
+                                Leer más
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
 
                     </div>
                 </div>
