--- a/index.html
+++ b/index.html
@@ -156,6 +156,42 @@
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </article>
+                    </div>
+                </div>
+            </section>
+
+            <section id="aboutus">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+
+                    <div class="flexbox">
+                        <div class="columna">
+                            <div class="imagen">
+                                <div class="marco">
+                                    <img src="./images/images/about-main.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="columna">
+                            <h3>The History</h3>
+                            <h4>
+                                Our Restaurant</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem mollitia debitis
+                                quibusdam laboriosam nesciunt deserunt dolorem minima pariatur obcaecati minus.
+                            </p>
+
+                            <div>
+                                <a href="" class="boton">Leer más
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
